# school-learn-agent

./: .env.example  .gitignore  README.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_core_schema.py  0002_rls_policies.py  0003_seed_math_demo.py  0004_external_id.py  0005_student_read_notes.py
apps/api/src/its/: __init__.py  config.py  main.py
apps/api/src/its/agent/: __init__.py  graph.py  state.py
apps/api/src/its/agent/nodes/: __init__.py  assess.py  explain.py  retrieve.py  route.py  update_model.py
apps/api/src/its/api/: __init__.py  content.py  dev.py  errors.py  schemas.py  student.py  teacher.py
apps/api/src/its/auth/: __init__.py  deps.py  roles.py
apps/api/src/its/content/: __init__.py  ingest.py  items.py  parser.py
apps/api/src/its/data/: __init__.py  production.py  seed.py
apps/api/src/its/db/: __init__.py  models.py  session.py
apps/api/src/its/grading/: __init__.py  base.py  history.py  language.py  math.py  registry.py
apps/api/src/its/learner_model/: __init__.py  bkt.py  dkt.py  tracing.py
apps/api/src/its/llm/: __init__.py  anonymize.py  client.py  embeddings.py
apps/api/src/its/llm/prompts/: __init__.py
apps/api/src/its/retrieval/: __init__.py  graph.py  individual.py  population.py  router.py  semantic.py
apps/api/src/its/safety/: __init__.py  cohort.py  rls.sql  scoping.py
docs/: 00-architecture.md  01-github-issues.md  02-foundations.md  03-database.md  04-safety.md  05-retrieval.md  06-learner-model-and-grading.md  07-agent.md  08-backend-api.md  (+6 more)
(+151 files in other folders)
